# pivotal_tokens

./: .gitignore  pyproject.toml  requirements.txt
data/: experiments
data/exp1.0.1-qwen3-1.7b-hotpotqa-baseline-thinking/: config.json
data/exp1.0.2-qwen3-1.7b-hotpotqa-baseline-no-thinking/: config.json
experiments/debug/: debug.py  example1.ipynb  example1.py  example2.ipynb  example2.py  example3.ipynb
experiments/exp0.1_eval/: evaluate_hotpotqa_fullwiki_qwen3_1_7b.py
notebooks/exp1.1-hotpotqa-baseline/: 010_analyze_results.ipynb
notebooks/exp1.1_hotpotqa_baseline/: 010_analyze_results.ipynb
notebooks/exp2.1-sps-tokens/: 010_analyze_pivotal_tokens.ipynb  020_prepare_alt_tokens.ipynb  exp_results_analysis.py
notebooks/exp2.2-alt-tokens-on-pivotal-positions/: 010_manually_validate_results.py  020_exp22_results_analysis.py
notebooks/exp2.2-random-tokens-on-pivotal-positions/: exp_results_analysis.py
notebooks/exp2.3-success-prob-of-random-tokens/: 010_exp23_results_analysis.py
notebooks/exp3.1-sps-sentences/: 030_exp31_results_analysis.py  demo.py  eda.py  exp_results_analysis.py
notebooks/exp3.2-sps-sentences-interventions/: 010_prepare_exp_data.py  020_validate_interventions.py  030_prepare_exp_data_random_sent.py  040_patch_interventions.py  (+1 more)
scripts/: calc_posterior.py  calc_succ_prob_for_alt_tokens.py  calc_succ_prob_for_rand_tokens.py  calc_succ_prob_for_sentence_interv.py  eval_gsm8k.py  eval_hotpotqa.py  eval_math500.py  extract_loglikelihood_tokens.py  extract_sps_sentences.py  extract_sps_tokens.py  find_alt_tokens.py
(+48 files in other folders)
