[project]
name = "pivotal-tokens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "torch>=2.8.0",
    "transformers>=4.57.1",
]

[project.scripts]
pivotal-tokens = "pivotal_tokens:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
