[project]
name = "pivotal-tokens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.2.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "jsonlines>=4.0.0",
    "nltk>=3.9.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[project.scripts]
pivotal-tokens = "pivotal_tokens:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
